# epitech-years

./: README.md
tek2&3/abstractVM/: Makefile
tek2&3/abstractVM/src/: Exception.cpp  Exception.hpp  Factory.cpp  Factory.hpp  IOperand.hpp  Include.hpp  Main.cpp  Operand.cpp  Operand.hpp  Parser.cpp  Parser.hpp
tek2&3/abstractVM/tests/: Makefile  response  test.avm  test1.avm  test2.avm  test3.avm  test6.avm  test7.avm  test8.avm  test9.avm  test_fail.avm  unit1.cpp
tek2&3/arcade/: Makefile  README.md
tek2&3/arcade/core/: Makefile
tek2&3/jetpack2tek3/: .gitignore  Makefile  map.txt
tek2&3/math/201yams/: 201yams
tek2&3/math/202unsold/: 202unsold
tek2&3/math/203hotline/: 203hotline
tek2&3/math/205IQ/: 205IQ
tek2&3/math/206neutrinos/: 206neutrinos
tek2&3/math/207demography/: 207demography
tek2&3/math/208dowels/: 208dowels
tek2&3/math/209poll/: 209poll
tek2&3/math/301dannon/: 301dannon
tek2&3/math/302separation/: 302separation
tek2&3/math/303make/: 303make
tek2&3/math/304pacman/: 304pacman
tek2&3/math/308reedpipes/: 308reedpipes
tek2&3/math/309pollution/: 309pollution
tek2&3/myftp/: Makefile  command.c  command_part2.c  data_command.c  server.c  server_loop.c  technical.c
tek2&3/myftp/include/: server.h
tek2&3/myteams/: .gitignore  Makefile
tek2&3/myteams/RFC/: Protocol
tek2&3/myteams/client/: call_error.c  call_writting_lib.c  call_writting_lib2.c  check_argument.c  code_receive.c  command_precise.c  create_argument.c  create_code.c  find_argument.c  list_argument.c  loop.c  main.c  myteams_client.h  utiliti.c
tek2&3/myteams/server/: data.h  funcs.c  funcs2.c  funcs3.c  main.c  manage_args.c  messages.c  myteams_server.h  retrieve_users.c  retrieve_users2.c  save.c  server.c  utils.c  utils2.c  utils3.c
tek2&3/nmobjdump/: Makefile  custom_strcmp.c  main.c  testfile.c
tek2&3/nmobjdump/include/: nm.h
tek2&3/nmobjdump/src_nm/: explore_sys.c  get_symb.c  get_symb2.c  rearrange.c  stock.c
tek2&3/pool/PDGD01/: My.hs
tek2&3/pool/PDGD02/: DoOp.hs
tek2&3/pool/PDGD03/: Game.hs  Tree.hs
tek2&3/pool/PDGD05/: Makefile  append_s_and_c.c  assign_s_and_c.c  at.c  c_str.c  clear_string.c  compare_s_and_c.c  copy.c  empty.c  find.c  init_and_destroy.c  length.c  string.h
tek2&3/pool/PDGD09/: Enchanter.cpp  Enchanter.hpp  Knight.cpp  Knight.hpp  Paladin.cpp  Paladin.hpp  Peasant.cpp  Peasant.hpp  Priest.cpp  Priest.hpp
tek2&3/pool/PDGD11/: Makefile
tek2&3/pool/PDGD12/: Algorithm.hpp  Array.hpp  Stack.cpp  Stack.hpp
tek2&3/pool/PDGRUSH1/: Check.hs  Makefile
tek2&3/pool/PDGRUSH3/: Makefile  main.cpp
tek2&3/rtype/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Protocol  README.md  conanfile.txt  vcpkg.json
tek2&3/rtype/.github/workflows/: clang-format-check.yml
tek2&3/rtype/Client/: GameClient.cpp  GameClient.hpp  main.cpp
tek2&3/rtype/Ecs/: Clock.cpp  Clock.hpp  IncludeComponents.hpp  IncludeCpp.hpp  IncludeSystem.hpp  Manager.cpp  Manager.hpp
tek2&3/rtype/Ecs/Component/: ComponentManager.cpp  ComponentManager.hpp
tek2&3/rtype/Ecs/Component/include/: Acceleration.hpp  Bonus.hpp  Bullet.hpp  Controlable.hpp  Damage.hpp  Health.hpp  Hitbox.hpp  IComp.hpp  Id.hpp  Pattern.hpp  Position.hpp  Rotate.hpp  Sound.hpp  Speed.hpp  Sprite.hpp  Text.hpp  Weapon.hpp
tek2&3/rtype/Ecs/Component/sources/: Acceleration.cpp  Bonus.cpp  Bullet.cpp  Controlable.cpp  Damage.cpp  Health.cpp  Hitbox.cpp  Id.cpp  Pattern.cpp  Position.cpp  Rotate.cpp  Speed.cpp  Sprite.cpp  Text.cpp
tek2&3/rtype/Ecs/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
tek2&3/rtype/Ecs/System/: BonusSystem.cpp  BonusSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemyShootSystem.cpp  EnemyShootSystem.hpp  EventsSystem.cpp  EventsSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  PatternSystem.cpp  PatternSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp  TextSystem.cpp  TextSystem.hpp
tek2&3/rtype/Graphics/: Events.cpp  Events.hpp  InitSfml.cpp  InitSfml.hpp
tek2&3/rtype/Network/: Enum.hpp  NetworkClient.cpp  NetworkClient.hpp  NetworkRoom.cpp  NetworkRoom.hpp  NetworkServer.cpp  NetworkServer.hpp  PacketOperatorSurcharge.hpp
tek2&3/rtype/server/: Server.cpp  Server.hpp  main.cpp  surchargeDeque.hpp
tek2&3/rtype/server/GameInstance/: GameServer.cpp  GameServer.hpp
tek2&3/tekspice/: Circuit.cpp  Circuit.hpp  IComponent.hpp  Makefile  Parser.cpp  Parser.hpp  create.cpp  main.cpp
tek2&3/tekspice/Component/: 4069.hpp  Clock.hpp  False.hpp  Input.hpp  Output.hpp  (+1 more)
(+171 files in other folders)
